--- a/BfCompiler/BfCompiler.csproj
+++ b/BfCompiler/BfCompiler.csproj
@@ -127,16 +127,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BfCompilation.cs" />
-    <Compile Include="BfCompilationException.cs" />
-    <Compile Include="BfCompiler.cs" />
-    <Compile Include="BinaryEmitter.cs" />
-    <Compile Include="CompilationConstants.cs" />
+    <Compile Include="Core\BfCompilation.cs" />
+    <Compile Include="Core\BfCompilationException.cs" />
+    <Compile Include="Core\BfCompiler.cs" />
+    <Compile Include="Core\BinaryEmitter.cs" />
+    <Compile Include="Core\CompilationConstants.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StatementBlockManager.cs" />
-    <Compile Include="SyntaxEmitter.cs" />
-    <Compile Include="TextEmitter.cs" />
+    <Compile Include="Core\StatementBlockManager.cs" />
+    <Compile Include="Core\SyntaxEmitter.cs" />
+    <Compile Include="Core\TextEmitter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -145,6 +145,9 @@
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0-rc2\tools\analyzers\C#\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0-rc2\tools\analyzers\C#\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Syntax\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
